flask-app/flask-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-pod
  labels:
    app: flask-app
spec:
  containers:
    - name: flask-app
      image: onurbolatogluu/flask-web-counter:v5
      ports:
        - containerPort: 5000
